--- a/config.ini
+++ b/config.ini
@@ -39,8 +39,9 @@ storage_by_excel = 0
 mail_host = smtp.163.com
 mail_user = urmytreasure@163.com
 mail_pass = PFGHEILSBAXVCWUV
-sender = urmytreasure@163.com
+# 发送的实际邮箱
+sender = xxxxx@163.com
 # receivers与to相互对应
-receivers = xxxxx@situdata.com
+receivers = xxxxx@xxxxx.com
 from = xxxxxx@163.com
 to = xxxx@xxxx.com,xxxx@xxx.com
